# aw-tray-control

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PACKAGING.md  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  config.toml  deny.toml  justfile
.githooks/: pre-push
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  pr-ai-assisted.yml  release.yml
desktop/: aw-tray-control.desktop
packaging/: README.md
packaging/aur/: PKGBUILD.template
packaging/debian/: control.template  rules.template
scripts/: dev-check.sh  dev-run.sh  doctor.sh  install-binary.sh  install-desktop-entry.sh  install-from-release.sh  lib.sh  reinstall-local.sh  uninstall.sh  utils.sh
src/: config.rs  error.rs  main.rs  notify.rs  process.rs  tray.rs
