[package]
name = "aw-tray-control"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "System tray controller for ActivityWatch services and dashboard access."
license = "AGPL-3.0-or-later"
readme = "README.md"
keywords = ["activitywatch", "tray", "linux", "productivity", "monitoring"]
categories = ["command-line-utilities", "config"]

[dependencies]
ksni = { version = "0.3", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
toml = "1"
directories = "6"
thiserror = "2"
signal-hook = "0.4"
log = "0.4"
env_logger = "0.11"
url = "2.5"
nix = { version = "0.31", features = ["signal"] }
fs2 = "0.4"